# lightweight-secure-tcp

./: .gitignore  CMakeLists.txt  README.md
docs/: 404.html  index.html  sitemap.xml
docs/markdown-page/: index.html
docusaurus/: docusaurus.config.ts  package-lock.json  package.json
docusaurus/docs/: contributing.md  introduction.md
examples/ESP32-Localhost-FizzBuzz/: README.md
examples/ESP32-Localhost-FizzBuzz/ESP32-localhost/lib/LightweightSecureTCP/: CMakeLists.txt
examples/ESP32-Localhost-FizzBuzz/ESP32-localhost/lib/LightweightSecureTCP/include/: lightweightsecuretcp.h
examples/ESP32-Localhost-FizzBuzz/ESP32-localhost/lib/LightweightSecureTCP/src/core/: lightweightsecureclient.cpp  lightweightsecureclient.h  lightweightsecureserver.cpp  lightweightsecureserver.h  lightweightsecuretcp.cpp  session.cpp  session.h
examples/ESP32-Localhost-FizzBuzz/ESP32-localhost/lib/LightweightSecureTCP/src/encryption/: key.cpp  key.h  xtea256.cpp  xtea256.h
examples/ESP32-Localhost-FizzBuzz/ESP32-localhost/lib/LightweightSecureTCP/src/protocol/communication/: handshakeresult.cpp  lwssocket.cpp  lwssocket.h  securityhandshake.cpp  transporter.cpp  transporter.h
examples/ESP32-Localhost-FizzBuzz/ESP32-localhost/lib/LightweightSecureTCP/src/protocol/packet/: disconnectpacket.cpp  handshakerequestpacket.h  handshakeresponsepacket.cpp  handshakeresponsepacket.h  packet.h  packetfactory.cpp  regularmessagepacket.cpp
examples/ESP32-Localhost-FizzBuzz/ESP32-localhost/lib/LightweightSecureTCP/src/utils/: callbacksetter.h  debugger.h  randomgenerator.h  thread.cpp
examples/ESP32-to-Desktop-FizzBuzz/: README.md
examples/ESP32-to-Desktop-FizzBuzz/Desktop-server/: CMakeLists.txt  main.cpp
examples/Qt-Localhost-Chat-App/: README.md
examples/Qt-Localhost-Chat-App/LocalhostChatApp/lib/LightweightSecureTCP/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp  test.h  test_Packets.cpp  test_eventhandlers.cpp  test_handshake.cpp  test_keepalive.cpp  test_randomgenerator.cpp  test_tcpcommunication.cpp  test_xtea256.cpp
(+149 files in other folders)
