# This subdirectory inclusion is only for internal examples.
# In your own projects, you should include the 'lib/LightweightSecureTCP' sources directly
# instead of relying on this example's relative path setup.
add_subdirectory(${CMAKE_SOURCE_DIR}/../../../lib/LightweightSecureTCP ${CMAKE_BINARY_DIR}/build_LWSTCP)
